@@ -1,4 +1,4 @@
-class OpenIdAuthenticationTablesGenerator < Rails::Generator::NamedBase
+class UpgradeOpenIdAuthenticationTablesGenerator < Rails::Generator::NamedBase
   def initialize(runtime_args, runtime_options = {})
     super
   end
