@@ -1,10 +1,9 @@
 begin
-  require 'openid'  
+  require 'openid'
 rescue LoadError
   begin
-    gem 'ruby-openid'
-    require 'openid'
-  rescue LoadError
+    gem 'ruby-openid', '>=2.0.4'
+  rescue Gem::LoadError
     puts "Install the ruby-openid gem to enable OpenID support"
   end
 end
