@@ -1,29 +1,19 @@
-module OpenIdAuthentication
-  class DbStore < OpenID::Store
-    def self.gc
-      now = Time.now.to_i
+require 'openid/store/interface'
 
-      # remove old nonces
-      nonces = Nonce.find(:all)
-      nonces.each {|n| n.destroy if now - n.created > 6.hours} unless nonces.nil?
-    
-      # remove expired assocs
-      assocs = Association.find(:all)
-      assocs.each { |a| a.destroy if a.from_record.expired? } unless assocs.nil?
+module OpenIdAuthentication
+  class DbStore < OpenID::Store::Interface
+    def self.cleanup_nonces
+      now = Time.now.to_i
+      Nonce.delete_all(["timestamp > ? OR timestamp < ?", now + OpenID::Nonce.skew, now - OpenID::Nonce.skew])
     end
 
-
-    def get_auth_key
-      unless setting = Setting.find_by_setting('auth_key')
-        auth_key = OpenID::Util.random_string(20)
-        setting  = Setting.create(:setting => 'auth_key', :value => auth_key)
-      end
-
-      setting.value
+    def self.cleanup_associations
+      now = Time.now.to_i
+      Association.delete_all(['issued + lifetime > ?',now])
     end
 
     def store_association(server_url, assoc)
-      remove_association(server_url, assoc.handle)    
+      remove_association(server_url, assoc.handle)
       Association.create(:server_url => server_url,
                          :handle     => assoc.handle,
                          :secret     => assoc.secret,
@@ -32,49 +22,34 @@ module OpenIdAuthentication
                          :assoc_type => assoc.assoc_type)
     end
 
-    def get_association(server_url, handle=nil)
-      assocs = handle.blank? ? 
-        Association.find_all_by_server_url(server_url) :
+    def get_association(server_url, handle = nil)
+      assocs = if handle.blank?
+          Association.find_all_by_server_url(server_url)
+        else
           Association.find_all_by_server_url_and_handle(server_url, handle)
-    
+        end
+
       assocs.reverse.each do |assoc|
-        a = assoc.from_record    
-        if a.expired?
+        a = assoc.from_record
+        if a.expires_in == 0
           assoc.destroy
         else
           return a
         end
       end if assocs.any?
-    
+
       return nil
     end
-  
-    def remove_association(server_url, handle)
-      assoc = Association.find_by_server_url_and_handle(server_url, handle)
-      unless assoc.nil?
-        assoc.destroy
-        return true
-      end
-      false
-    end
-  
-    def store_nonce(nonce)
-      use_nonce(nonce)
-      Nonce.create :nonce => nonce, :created => Time.now.to_i
-    end
-  
-    def use_nonce(nonce)
-      nonce = Nonce.find_by_nonce(nonce)
-      return false if nonce.nil?
-    
-      age = Time.now.to_i - nonce.created
-      nonce.destroy
 
-      age < 6.hours # max nonce age of 6 hours
+    def remove_association(server_url, handle)
+      Association.delete_all(['server_url = ? AND handle = ?', server_url, handle]) > 0
     end
-  
-    def dumb?
-      false
+
+    def use_nonce(server_url, timestamp, salt)
+      return false if Nonce.find_by_server_url_and_timestamp_and_salt(server_url, timestamp, salt)
+      return false if (timestamp - Time.now.to_i).abs > OpenID::Nonce.skew
+      Nonce.create(:server_url => server_url, :timestamp => timestamp, :salt => salt)
+      return true
     end
   end
 end
