@@ -1,5 +1,0 @@
-module OpenIdAuthentication
-  class Setting < ActiveRecord::Base  
-    set_table_name :open_id_authentication_settings
-  end
-end
